--- a/hackpack/templates/index.html
+++ b/hackpack/templates/index.html
@@ -4,20 +4,29 @@
 
 {% block header %}Success!{% endblock %}
 
-{% block message %}You deployed Twilio Hackpack for Heroku and Flask{% endblock %}
+{% block message %}You deployed Twilio SimpleDial on Heroku using the Flask webserver{% endblock %}
 
-{% block blurb %}Here are some helpful links to get you started:{% endblock
+{% block blurb %}Please configure your SIP Domain Voice URL with the following Heroku URL:{% endblock
 %}
 
 {% block content %}
     <a href="https://www.twilio.com/user/account/phone-numbers/incoming"
-       class="button">Configure Twilio</a>
+       class="button">Click to buy a phone number from Twilio</a>
+    <a href="https://www.twilio.com/console/voice/sip/endpoints"
+       class="button">Click to configure your SIP Domain</a>
 
-    <dl id="url_list">
+url_for('.voice', _external=True)
+
+  <!--  'Voice Request URL': url_for('.voice', _external=True), -->
+
+    <a href={{ url_for('.voice') }}>Voice</a>
+    
+ <!--   <dl id="url_list">
         {% for key, value in params.items() %}
         <dt>{{key}}</dt>
         <dd><a href="{{value}}">{{value}}</a></dd>
         {% endfor %}
     </dl>
+-->
 
 {% endblock %}
