added contributors: Nakul and Yan.

--- a/hackpack/templates/base.html
+++ b/hackpack/templates/base.html
@@ -50,13 +50,12 @@
     <footer>
         <p class="footer">
             Source on <a
-                href="https://github.com/RobSpectre/Twilio-Hackpack-for-Heroku-and-Flask">Github</a>.
+                href="https://github.com/timbeyers/sip2pstn-simpledial">Github</a>.
             Released under <a
                 href="http://www.opensource.org/licenses/mit-license.html">
                 MIT license</a>.
-            Lovingly crafted by <a id="twiliocon-2011-link" 
-                href="http://www.meetup.com/Twilio/New-York-NY/">
-                Twilio New York</a>.
+            Based on the incredible HackPack <a https://github.com/RobSpectre/Twilio-Hackpack-for-Heroku-and-Flask</a>
+            With Dialing logic by Yan Zhou and Nakul Rathod
         </p>
     </footer>
   </div>
