updated readme and other misc.

--- a/hackpack/templates/base.html
+++ b/hackpack/templates/base.html
@@ -54,7 +54,7 @@
             Released under <a
                 href="http://www.opensource.org/licenses/mit-license.html">
                 MIT license</a>.
-            Based on the incredible HackPack <a https://github.com/RobSpectre/Twilio-Hackpack-for-Heroku-and-Flask</a>
+            Based on the incredible  <a https://github.com/RobSpectre/Twilio-Hackpack-for-Heroku-and-Flask>HackPack</a>
             With Dialing logic by Yan Zhou and Nakul Rathod
         </p>
     </footer>
