--- a/hackpack/templates/index.html
+++ b/hackpack/templates/index.html
@@ -4,10 +4,14 @@
 
 {% block header %}Success!{% endblock %}
 
-{% block message %}You deployed Twilio SimpleDial on Heroku using the Flask webserver{% endblock %}
+{% block message %}You deployed Twilio SimpleDial on Heroku using the Flask Web Framework{% endblock %}
 
-{% block blurb %}Please configure your SIP Domain Voice URL with the following Heroku URL:{% endblock
+{% block blurb %}Please configure your SIP Domain Voice URL with the following Heroku URL:{% endblock %}
+{% block blurb %}Replace +1NXXNXXXXXX with your callerId in E.164 format. Must be a Twilio provisioned number or a verified number:{% endblock
+
 %}
+
+<a href="https://www.twilio.com/console/phone-numbers/verified">To verify with Twilio your personal mobile number</a>
 
 {% block content %}
     <dl id="url_list">
@@ -18,8 +22,8 @@
     </dl>
 
     <a href="https://www.twilio.com/user/account/phone-numbers/incoming"
-       class="button">Click to buy a phone number from Twilio</a>
+       class="button">Buy a phone number from Twilio</a>
     <a href="https://www.twilio.com/console/voice/sip/endpoints"
-       class="button">Click to configure your SIP Domain</a>
+       class="button">Configure your SIP Domain</a>
 
 {% endblock %}
