--- a/hackpack/templates/index.html
+++ b/hackpack/templates/index.html
@@ -2,12 +2,12 @@
 
 {% block title %}Successfully Deployed{% endblock %}
 
-{% block header %}Success!{% endblock %}
+{% block header %}Deployment - Success!{% endblock %}
 
 {% block message %}You deployed Twilio SimpleDial on Heroku using the Flask Web Framework{% endblock %}
 
-{% block blurb %}Please configure your SIP Domain Voice URL with the following Heroku URL:
-Replace +1NXXNXXXXXX with your callerId in E.164 format. Must be a Twilio provisioned number or a verified number:{% endblock %}
+{% block blurb %}Please configure your SIP Domain Voice URL with the following Heroku URL.
+Replace +1NXXNXXXXXX with your callerId in E.164 format. callerId must be a Twilio provisioned number or a verified number:{% endblock %}
 
 <a href="https://www.twilio.com/console/phone-numbers/verified">To verify with Twilio your personal mobile number</a>
 
